Added the deleteUser function

--- a/index.html
+++ b/index.html
@@ -70,10 +70,16 @@
                         <button type="button" class="divbutton savedata" onclick="objectPatientData.savePatientData()">Proceed</button>
                         <button type="button" class="divbutton discarddata return" onclick="showPage( 'Administration' )">Cancel</button>
                     </div>
+                    <!-- top: UserNew -->
+                    <div class="PatientData UserNew pageOverlay">
+                        <button type="button" class="divbutton savedata" onclick="objectPatientData.savePatientData()">Save Changes</button>
+                        <button type="button" class="divbutton return" onclick="showPage( 'UserList' )">Cancel</button>
+                    </div>
                     <!-- top: UserNew UserEdit -->
                     <div class="PatientData UserNew UserEdit pageOverlay">
                         <button type="button" class="divbutton edit_note" onclick="objectPatientData.clickEdit()">Edit</button>
                         <button type="button" class="divbutton savedata" onclick="objectPatientData.savePatientData()">Save Changes</button>
+                        <button type="button" class="divbutton delete" onclick="deleteUser()">Delete User</button>
                         <button type="button" class="divbutton return" onclick="showPage( 'UserList' )">Cancel</button>
                     </div>
                     <!-- top: SendUser -->
