Typos and too many buttons

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                         <button type="button" class="divbutton savedata" onclick="objectPatientData.savePatientData()">Save Changes</button>
                         <button type="button" class="divbutton return" onclick="showPage( 'UserList' )">Cancel</button>
                     </div>
-                    <!-- top: UserNew UserEdit -->
-                    <div class="PatientData UserNew UserEdit pageOverlay">
+                    <!-- top: UserEdit -->
+                    <div class="PatientData UserEdit pageOverlay">
                         <button type="button" class="divbutton edit_note" onclick="objectPatientData.clickEdit()">Edit</button>
                         <button type="button" class="divbutton savedata" onclick="objectPatientData.savePatientData()">Save Changes</button>
                         <button type="button" class="divbutton delete" onclick="deleteUser()">Delete User</button>
